--- a/.github/workflows/master_ProjectResumeViewerApi.yml
+++ b/.github/workflows/master_ProjectResumeViewerApi.yml
@@ -2,51 +2,46 @@ name: Build and deploy ASP.Net Core app to Azure Web App - ProjectResumeViewerAp
 
 on:
   push:
-    branches:
-      - master
-      - main
+    branches: [ master, main ]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
-
+      contents: read
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up .NET Core
+      - name: Set up .NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.x'
 
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
-
-      - name: dotnet publish
+      - name: Publish
         run: dotnet publish -c Release -o ./myapp
 
-      - name: Upload artifact for deployment job
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
           path: ./myapp
+          if-no-files-found: error
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
+      id-token: write
+      contents: read
     steps:
-      - name: Download artifact from build job
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-      
-      - name: Login to Azure
+          path: ./myapp   # <— ensure this matches the deploy ‘package’ path
+
+      - name: Azure login
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_F01407272DFE4260813A22A743C47FA2 }}
@@ -54,9 +49,8 @@ jobs:
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_580158BF669D454C8B1B3A5C953199F2 }}
 
       - name: Deploy to Azure Web App
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'ProjectResumeViewerApi'
-          slot-name: 'Production'
+          app-name: ProjectResumeViewerApi
+          # omit slot-name for Production, or use 'production'
           package: ./myapp
